# PDF-RAG

./: .gitignore  README.md
server/: .gitignore  main.py  pyproject.toml  streamlit_app.py
server/app/models/: user.py
server/app/routes/: route.py
server/app/services/: chain.py  embedding.py  llm.py  load_document.py  retriever.py
